feat: AimoveableLevelState
- Implemented New Level State which implements Level State
- Created New Food AI FOod to hold function move to away from snake
- Added Food Factory Implementations
- Fixed InvisibleLevelState not running
- Fixed Multiple Sounds Playing when Pause and resumed